--- a/category-wine.html
+++ b/category-wine.html
@@ -25,16 +25,16 @@
 <body>
 	<!-- Codrops code: http://tympanus.net/codrops/2013/05/02/fixed-background-scrolling-layout/ -->
 	<div class="toggle-main">
-		<b href="#" class="b">
+		<a href="#" class="b">
 		  <span></span>
 		  <span></span>
 		  <span></span>
-		</b>
+		</a>
 		<div class="nav-toggle">
 			<div class="menu">
 				<ul>
 					<!-- copy this part for svg hover effect -->
-					<li class="hidden_1"><a href="#"><svg version="1.1" id="home" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+					<li class="hidden_1"><a href="index.html"><svg version="1.1" id="home" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
 <path fill="none" stroke="#FFFFFF" stroke-miterlimit="10" d="M71,38.9V26.3c0-0.4-0.4-0.7-0.8-0.7H63c-0.4,0-0.8,0.3-0.8,0.7v3.5
 	c0,0.6-0.8,0.9-1.3,0.5l-10.4-9.2c-0.3-0.3-0.8-0.3-1.1,0l-29.3,26c-0.5,0.4-0.2,1.2,0.6,1.2h7c0.4,0,0.8,0.3,0.8,0.7v29.2
@@ -43,7 +43,7 @@
 	C71.1,39.3,71,39.1,71,38.9z"/>
 </svg>
 </a></li>
-					<li class="hidden_1"><a href="#"><svg version="1.1" id="beach" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+					<li class="hidden_1"><a href="category-beach.html"><svg version="1.1" id="beach" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
 <g>
 	<path fill="none" stroke="#FFFFFF" stroke-miterlimit="10" d="M22.9,70.5h59.2c0,0-9.7-13.7-29.2-13.6c-6.2,0-11.2,0.8-15.2,2.1
@@ -57,7 +57,7 @@
 
 
 </a></li>
-					<li class="hidden_1"><a href="#"><svg version="1.1" id="city" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+					<li class="hidden_1"><a href="category-city.html"><svg version="1.1" id="city" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
 <path fill="none" stroke="#FFFFFF" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M20,90.5h49
 	 M47.5,45.5h-23v45h23V45.5z M33.5,50.5h-5v5h5V50.5z M43.5,50.5h-5v5h5V50.5z M33.5,59.5h-5v5h5V59.5z M43.5,59.5h-5v5h5V59.5z
@@ -67,7 +67,7 @@
 </svg>
 
 </a></li>
-					<li class="hidden_1"><a href="#"><svg version="1.1" id="wine" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+					<li class="hidden_1"><a href="category-wine.html"><svg version="1.1" id="wine" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
 <g>
 	<path fill="none" stroke="#FFFFFF" stroke-linecap="round" stroke-miterlimit="10" d="M41.9,28.6v-8.5h2v-2.9H33.7v2.9h2v11.2
@@ -81,7 +81,7 @@
 	</g>
 </g>
 </svg></a></li>
-					<li class="hidden_1"><a href="#"><svg version="1.1" id="food" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+					<li class="hidden_1"><a href="category-food.html"><svg version="1.1" id="food" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
 <path fill="none" stroke="#FFFFFF" stroke-miterlimit="10" d="M71.7,73.8H22.2c-1.2,0-2.2-1-2.2-2.2l0,0c0-1.2,1-2.2,2.2-2.2h49.5
 	c1.2,0,2.2,1,2.2,2.2l0,0C73.9,72.8,72.9,73.8,71.7,73.8z M57.3,56.5c3.2,0.6,7.2-0.3,10.3-2.5c1.8-1.3,3.3-3.1,4-5.2
@@ -174,31 +174,29 @@
 		</section>
 		<section id="cwsection2">
 			<div class="Pop-trigger v-center2">
-				<a class="js-open-modal btn" href="#" data-modal-id="popup2"> Pairing </a> 
+				<a class="js-open-modal btn" href="#" data-modal-id="popup2"> Mendocino</a> 
 			</div>
 			<div id="popup2" class="modal-box">
 			  <div class="modal-header"> <a href="#" class="js-modal-close close">×</a>
-			    <h3>Pairing Wine with Food</h3>
+			    <h3>Mendocino Wine Country</h3>
 			  </div>
 			  <div class="modal-body">
-			    <p>In Napa, fine dining isn’t limited to restaurants. A number of prestigious Napa Valley wineries now offer food pairings to elevate the traditional tasting room experience. If you believe wine is best appreciated with food, make reservations at these wineries.
-			    Sequoia Grove, Del Dotto Family Vineyards, Signorello Estate, Swanson Vineyards, Kendall-Jackson and Silver Oak Cellars.
+			    <p>Mendocino County wine region is not only beautiful, it’s cutting edge too. The area is home to some of the state’s most progressive winemakers, who perfect organic sustainable techniques in their boutique vineyards. In fact, Mendocino County has the most acreage of certified organic vineyards in the country. See what it’s all about at Frey Vineyards, America’s first maker of certified biodynamic wines—they even say they are vegan and gluten-free.
 </p>
 			  </div>
 			</div>
 		</section>
 		<section id="cwsection3">
 			<div class="Pop-trigger v-center2">
-				<a class="js-open-modal btn" href="#" data-modal-id="popup3"> Types of wine </a> 
+				<a class="js-open-modal btn" href="#" data-modal-id="popup3">Santa Ynez</a> 
 			</div>
 			<div id="popup3" class="modal-box">
 			  <div class="modal-header"> <a href="#" class="js-modal-close close">×</a>
-			    <h3>Types of wine</h3>
+			    <h3>Santa Ynez Wine Country</h3>
 			  </div>
 			  <div class="modal-body">
-			    <p><h4>Cabernet Sauvignon</h4> is the acknowledged king of red grapes in Napa Valley, accounting for 40% of our total production and 55% of our crop value. One should visit Silver Oak.
-			    <h4>Chardonnay</h4> is the second most planted grape variety in Napa Valley, and grows with particular success in the calcium-rich soils and cool climate of the Los Carneros AVA, where it can ripen slowly One should visit Cakebread Cellars.
-			    <h4>Sauvignon Blanc</h4> the intense flavor profile of Sauvignon Blanc grabs your attention. Herbaceous, grassy notes and vibrant acidity are hallmark qualities of this grape, and it is capable of showing a wide variety of fruit character. One should visit Acacia Vineyard.
+			    The Santa Ynez Valley, just north of Santa Barbara, is one of most diverse grape-growing regions in the county. Near the Pacific, fog and cool air rolls in at dusk, ideal for Chardonnay and Pinot Noir grapes. Thirty miles inland at Happy Canyon, it’s sunny and hot—perfect for Bordeaux varieties like Cab Franc and Merlot.
+				And scenic? How about rolling hills, endless vines, and ancient oaks to the horizon. Between the wines and the views, it’s easy to see why the region became a star in the 2004 surprise hit, Sideways. Take a self-guided tour of the film’s many shoot locations in Buellton, Los Alamos, and Los Olivos—even if you don’t remember the movie, these places are all worth a visit.
 
 			</p>
 			  </div>
@@ -206,14 +204,15 @@
 		</section>
 		<section id="cwsection4">
 			<div class="Pop-trigger v-center2">
-				<a class="js-open-modal btn" href="#" data-modal-id="popup4"> Restaurants </a> 
+				<a class="js-open-modal btn" href="#" data-modal-id="popup4">Temecula Valley</a> 
 			</div>
 			<div id="popup4" class="modal-box">
 			  <div class="modal-header"> <a href="#" class="js-modal-close close">×</a>
-			    <h3>Restaurants</h3>
+			    <h3>Temecula Valley Wine Country</h3>
 			  </div>
 			  <div class="modal-body">
-			    <p>Napa Valley is home to some truly great wines, but it's also a wonderful place to eat, with some outstanding restaurants such as The French Laundry, Meadowood, Bistro Jeanty and Redd.</p>
+			    <p>For many visitors, the Temecula Valley Wine Country is still a surprise. After all, a lot of people just don’t expect to see gently rolling hills blanketed scribed with rows of vineyards so close to the California desert. But the Temecula Valley has been producing top wines since the 1970s. And like the best vintages, this wine country just gets better with age.
+				It’s a diverse growing region, home to everything from cooler climate grapes like Chardonnay to such warm-weather loving varieties as Syrah and Grenache. The tasting experience is varied, too. </p>
 			  </div>
 			</div>
 		</section>
