--- a/category-city.html
+++ b/category-city.html
@@ -158,46 +158,61 @@
 			<a href="#ctsection5">Section 5</a>
 		</nav>
 		<section id="ctsection1">
-			<div class="Pop-trigger v-center2">
-				<a class="js-open-modal btn" href="#" data-modal-id="popup1"> Los angeles </a> 
-			</div>
-			<div id="popup1" class="modal-box">
-			  <div class="modal-header"> <a href="#" class="js-modal-close close">×</a>
-			    <h3>Los Angeles</h3>
-			  </div>
-			  <div class="modal-body">
-			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut commodo at felis vitae facilisis. Cras volutpat fringilla nunc vitae hendrerit. Donec porta id augue quis sodales. Sed sit amet metus ornare, mattis sem at, dignissim arcu. Cras rhoncus ornare mollis. Ut tempor augue mi, sed luctus neque luctus non. Vestibulum mollis tristique blandit. Aenean condimentum in leo ac feugiat. Sed posuere, est at eleifend suscipit, erat ante pretium turpis, eget semper ex risus nec dolor. Etiam pellentesque nulla neque, ut ullamcorper purus facilisis at. Nam imperdiet arcu felis, eu placerat risus dapibus sit amet. Praesent at justo at lectus scelerisque mollis. Mauris molestie mattis tellus ut facilisis. Sed vel ligula ornare, posuere velit ornare, consectetur erat.
-			    </p>
-			  </div>
+			<div class="gradient-1">
+				<div class="Pop-trigger v-center2">
+					<a class="js-open-modal btn" href="#" data-modal-id="popup1"> Los angeles </a> 
+				</div>
+				<div id="popup1" class="modal-box">
+				  <div class="modal-header"> <a href="#" class="js-modal-close close">×</a>
+				    <h3>Los Angeles</h3>
+				  </div>
+				  <div class="modal-body">
+				    <p>How your story unfolds depends on where it begins. In Los Angeles, every neightborhood sets a different scene. Eclectic, progressive, trendy, laid back or retro, there's a singature locale ready to host your next only-in-L.A moment. </br>
+				    It’s known as the Entertainment Capital of the World and is home to renowned museums, along with 75 miles of sunny coastline. With so much to see and do, the best way to discover L.A. is by exploring L.A.’s vibrant multicultural neighborhoods. 
+				    </p>
+
+				  </div>
+				</div>
 			</div>
 		</section>
 		<section id="ctsection2">
-			<div class="Pop-trigger v-center2">
-				<a class="js-open-modal btn" href="#" data-modal-id="popup2"> San Francisco </a> 
-			</div>
-			<div id="popup2" class="modal-box">
-			  <div class="modal-header"> <a href="#" class="js-modal-close close">×</a>
-			    <h3>San Francisco</h3>
-			  </div>
-			  <div class="modal-body">
-			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut commodo at felis vitae facilisis. Cras volutpat fringilla nunc vitae hendrerit. Donec porta id augue quis sodales. Sed sit amet metus ornare, mattis sem at, dignissim arcu. Cras rhoncus ornare mollis. Ut tempor augue mi, sed luctus neque luctus non. Vestibulum mollis tristique blandit. Aenean condimentum in leo ac feugiat. Sed posuere, est at eleifend suscipit, erat ante pretium turpis, eget semper ex risus nec dolor. Etiam pellentesque nulla neque, ut ullamcorper purus facilisis at. Nam imperdiet arcu felis, eu placerat risus dapibus sit amet. Praesent at justo at lectus scelerisque mollis. Mauris molestie mattis tellus ut facilisis. Sed vel ligula ornare, posuere velit ornare, consectetur erat.</p>
-			  </div>
+			<div class="gradient-2">
+				<div class="Pop-trigger v-center2">
+					<a class="js-open-modal btn" href="#" data-modal-id="popup2"> San Francisco </a> 
+				</div>
+				<div id="popup2" class="modal-box">
+				  <div class="modal-header"> <a href="#" class="js-modal-close close">×</a>
+				    <h3>San Francisco</h3>
+				  </div>
+				  <div class="modal-body">
+				    <p>San Francisco is home to a little bit of everything. Whether you’re a first time
+	                    visitor or a long-time local. This is the place to find out about all things San Francisco. </br>
+	                    In northern California, San Francisco is a city on the tip of a peninsula surrounded by the Pacific Ocean and San Francisco Bay. It's known for its hilly landscape, year-round fog, iconic Golden Gate Bridge, cable cars and colorful Victorian houses. The Financial District's Transamerica Pyramid is its most distinctive skyscraper. In the bay sits Alcatraz Island, site of the notorious former prison.
+					</p>
+				  </div>
+				</div>
 			</div>
 		</section>
 		<section id="ctsection3">
-			<div class="Pop-trigger v-center2">
-				<a class="js-open-modal btn" href="#" data-modal-id="popup3"> Sacramento </a> 
-			</div>
-			<div id="popup3" class="modal-box">
-			  <div class="modal-header"> <a href="#" class="js-modal-close close">×</a>
-			    <h3>Sacramento</h3>
-			  </div>
-			  <div class="modal-body">
-			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut commodo at felis vitae facilisis. Cras volutpat fringilla nunc vitae hendrerit. Donec porta id augue quis sodales. Sed sit amet metus ornare, mattis sem at, dignissim arcu. Cras rhoncus ornare mollis. Ut tempor augue mi, sed luctus neque luctus non. Vestibulum mollis tristique blandit. Aenean condimentum in leo ac feugiat. Sed posuere, est at eleifend suscipit, erat ante pretium turpis, eget semper ex risus nec dolor. Etiam pellentesque nulla neque, ut ullamcorper purus facilisis at. Nam imperdiet arcu felis, eu placerat risus dapibus sit amet. Praesent at justo at lectus scelerisque mollis. Mauris molestie mattis tellus ut facilisis. Sed vel ligula ornare, posuere velit ornare, consectetur erat.</p>
-			  </div>
+			<div class="gradient-1">
+				<div class="Pop-trigger v-center2">
+					<a class="js-open-modal btn" href="#" data-modal-id="popup3"> Sacramento </a> 
+				</div>
+				<div id="popup3" class="modal-box">
+				  <div class="modal-header"> <a href="#" class="js-modal-close close">×</a>
+				    <h3>Sacramento</h3>
+				  </div>
+				  <div class="modal-body">
+				    <p>Sacramento is the capital city of the U.S. state of California and the seat of government of Sacramento County. It is at the confluence of the Sacramento River and the American River in the northern portion of California's expansive Central Valley.</br>
+				    There is no shortage of things to do in Sacramento, California. With more than 230 days of sunshine annually, Sacramento is the perfect place to explore the outdoors, soak up the California sun, go wine tasting or attend sporting events. But the things to do here aren’t limited to the outdoors. World-class museums, performing arts groups and other family fun activities make every day unique in California’s capital.
+
+				    </p>
+				  </div>
+				</div>
 			</div>
 		</section>
 		<section id="ctsection4">
+			<div class="gradient-2">
 			<div class="Pop-trigger v-center2">
 				<a class="js-open-modal btn" href="#" data-modal-id="popup4"> San Joes </a> 
 			</div>
@@ -206,21 +221,29 @@
 			    <h3>San Joes</h3>
 			  </div>
 			  <div class="modal-body">
-			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut commodo at felis vitae facilisis. Cras volutpat fringilla nunc vitae hendrerit. Donec porta id augue quis sodales. Sed sit amet metus ornare, mattis sem at, dignissim arcu. Cras rhoncus ornare mollis. Ut tempor augue mi, sed luctus neque luctus non. Vestibulum mollis tristique blandit. Aenean condimentum in leo ac feugiat. Sed posuere, est at eleifend suscipit, erat ante pretium turpis, eget semper ex risus nec dolor. Etiam pellentesque nulla neque, ut ullamcorper purus facilisis at. Nam imperdiet arcu felis, eu placerat risus dapibus sit amet. Praesent at justo at lectus scelerisque mollis. Mauris molestie mattis tellus ut facilisis. Sed vel ligula ornare, posuere velit ornare, consectetur erat.</p>
+			    <p>San Jose is a large city surrounded by rolling hills in Silicon Valley, a major technology hub in California's Bay Area. The downtown historic district is known for its architectural landmarks, from the 1883 Italianate-style Oddfellows building to Spanish Colonial Revival structures. The downtown area is also home to the Tech Museum of Innovation, devoted to the exploration of science and technology.</br>
+				You'll also want to explore some of our stranger sights like the spooky Winchester Mystery House and the quirky New Almaden Quicksilver Mining Museum. But, there is much more to San Jose than technology and history; it's also a unique cultural hub. With the largest Vietnamese population outside of Vietnam and one of the three remaining Japantowns in the US, this City-of-Firsts is the perfect place to start your exploration of Silicon Valley and the South Bay.
+
+			    </p>
 			  </div>
+			</div>
 			</div>
 		</section>
 		<section id="ctsection5">
-			<div class="Pop-trigger v-center2">
-				<a class="js-open-modal btn" href="#" data-modal-id="popup5"> San Diego </a> 
-			</div>
-			<div id="popup5" class="modal-box">
-			  <div class="modal-header"> <a href="#" class="js-modal-close close">×</a>
-			    <h3>San Dieto</h3>
-			  </div>
-			  <div class="modal-body">
-			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut commodo at felis vitae facilisis. Cras volutpat fringilla nunc vitae hendrerit. Donec porta id augue quis sodales. Sed sit amet metus ornare, mattis sem at, dignissim arcu. Cras rhoncus ornare mollis. Ut tempor augue mi, sed luctus neque luctus non. Vestibulum mollis tristique blandit. Aenean condimentum in leo ac feugiat. Sed posuere, est at eleifend suscipit, erat ante pretium turpis, eget semper ex risus nec dolor. Etiam pellentesque nulla neque, ut ullamcorper purus facilisis at. Nam imperdiet arcu felis, eu placerat risus dapibus sit amet. Praesent at justo at lectus scelerisque mollis. Mauris molestie mattis tellus ut facilisis. Sed vel ligula ornare, posuere velit ornare, consectetur erat.</p>
-			  </div>
+			<div class="gradient-1">
+				<div class="Pop-trigger v-center2">
+					<a class="js-open-modal btn" href="#" data-modal-id="popup5"> San Diego </a> 
+				</div>
+				<div id="popup5" class="modal-box">
+				  <div class="modal-header"> <a href="#" class="js-modal-close close">×</a>
+				    <h3>San Dieto</h3>
+				  </div>
+				  <div class="modal-body">
+				    <p>San Diego is a city on the Pacific coast of California known for its beaches, parks and warm climate. Immense Balboa Park is the site of the world-famous San Diego Zoo, as well as numerous art galleries, artist studios, museums and gardens.</br>
+					 The best part of a San Diego is doing nothing at all but relaxing. With 70 miles of beautiful beaches, countless parks and gardens, and endless opportunities for pampering at one of the areas many spas and resorts, San Diego is an excellent destination for some quality R&R.
+				    </p>
+				  </div>
+				</div>
 			</div>
 		</section>
 	</div>
